* Sun Jun 5 2005 Brendan O'Dea <bod@optusnet.com.au> 2.1.0
- Add IPv6 support from Jonathan McDowell.
- Add CHAP support from Jordan Hrycaj.
- Add interim accounting support from Vladislav Bjelic.
- Negotiate MRU, default 1458 to avoid fragmentation.
- Sanity check that cluster_send_session is not called from a child
  process.
- Use bounds-checking lookup functions for string constants.
- Add enum for RADIUS codes.
- Make "call_" prefix implict in CSTAT() macro.
- Fix some format string problems.
- Remove "save_state" option.  Not maintained anymore; use clustering
  to retain state across restarts.
- Simplify AVP unhiding code.
- Add optional "username" parameter to ungarden control, allowing the
  username to be reset before going online.
- Add result/error codes and message to StopCCN when shutting down tunnels.
- Add result/error codes to CDN when shutting down sessions.  Sends 2/7
  (general error, try another LNS) when out of IP addresses, and 3
  (adminstrative) for everything else (suggestion from Chris Gates).
- Use cli_error() for error messages and help.
- Don't use LOG() macro in initdata() until the config struct has been
  allocated (uses config->debug).
- Initialise log_stream to stderr to catch errors before the config file
  is read.
- Make "show running-config" a privileged command (contains clear text
  shared secrets).
- Add sessionctl plugin to provide drop/kill via nsctl.
- New config option: allow_duplicate_users which determines whether
  or not to kill older sessions with the same username.
- Fix byte counters in accounting records.
- Add Acct-Output-Gigawords, Acct-Input-Gigawords attributes to RADIUS
  accounting packets.
- Fix icmp host unreachable to use router address.
- Include endpoint address in accounting dump files.
- Convert mainloop to use epoll rather than select.
- Add note about fragmentation in Docs/manual.html, and a sample
  iptables rule for MSS clamping.
- Merge 2.0.22: